--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id("xyz.jpenilla.run-paper") version "2.3.1"
+    id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 
 group = 'com.tmquan2508'
@@ -22,6 +23,9 @@ dependencies {
     compileOnly("org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT")
     compileOnly("org.apache.logging.log4j:log4j-api:2.17.1")
     compileOnly("org.apache.logging.log4j:log4j-core:2.17.1")
+    implementation("org.javassist:javassist:3.29.0-GA")
+    compileOnly("org.yaml:snakeyaml:1.8")
+    compileOnly("org.apache.commons:commons-lang3:3.12.0")
 }
 
 tasks {
@@ -58,4 +62,12 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+build {
+    dependsOn shadowJar
+}
+
+artifacts {
+    archives shadowJar
 }
