Feat: Change Spread logic to use fake CRC as marker.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 import com.tmquan2508.gradle.InjectClassList
-import com.tmquan2508.buildtools.FakeCrcMarker
+import com.tmquan2508.gradle.FakeCrcMarker
 
 plugins {
     id 'java'
