ci: Upload build artifacts after job completion.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,10 @@ jobs:
       - name: Build plugin
         run: ./gradlew build
         shell: bash
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: plugin-artifacts
+          path: build/libs/
+          retention-days: 1
