--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compileOnly("org.apache.logging.log4j:log4j-core:2.17.1")
     compileOnly("org.yaml:snakeyaml:2.0")
     compileOnly("org.apache.commons:commons-lang3:3.12.0")
+    implementation("org.javassist:javassist:3.29.0-GA")
 }
 
 def targetJavaVersion = 21
