--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     compileOnly("org.yaml:snakeyaml:2.0")
     compileOnly("org.apache.commons:commons-lang3:3.12.0")
     implementation("org.javassist:javassist:3.29.0-GA")
+    implementation("org.ow2.asm:asm:9.5")
+    implementation("org.ow2.asm:asm-tree:9.5")
+    implementation("org.ow2.asm:asm-commons:9.5")
 }
 
 def targetJavaVersion = 21
