--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ plugins {
     id("com.gradleup.shadow") version "9.1.0"
 }
 
-group = 'com.tmquan2508'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
