ci: only upload -min.jar

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,4 +47,4 @@ jobs:
         with:
             name: BD ${{ github.ref_name }}
             draft: true 
-            files: ./build/libs/*
+            files: ./build/libs/*-min.jar
